[package]
name = "play_bt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_bencode = "0.2.4"
sha1 = "0.10.6"
