[package]
name = "play_bt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "0.4"
clap = { version = "4.4.8", features = ["derive"] }
hex = "0.4.3"
reqwest = "0.11.22"
serde = { version = "1.0.192", features = ["derive"] }
serde_bencode = "0.2.4"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-codec = "0.1.2"
